@@ -1,3 +1,8 @@
+2004-08-04  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* smtp.tcl:     Do not try to authenticate if no username is
+	                supplied.
+
 2004-07-08  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* smtp.man:     Added mention of DIGEST-MD5 support and put some
